src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__func_stmt-5.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
expected `identifier`
| fn f([4;31m**[0mkwargs, a,): pass


