src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__func_stmt-6.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
unexpected token
| fn f(a, b=[4;31m,[0m): pass


