src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__func_stmt-7.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
duplicate argument `a`
| fn f(a, [4;31ma[0m): pass


