src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__grouping_expr.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Expr(
            Binary(
                Binary {
                    op: Add,
                    left: GetVar(
                        GetVar {
                            name: Ident(
                                "a",
                            ),
                        },
                    ),
                    right: GetVar(
                        GetVar {
                            name: Ident(
                                "b",
                            ),
                        },
                    ),
                },
            ),
        ),
        Expr(
            Binary(
                Binary {
                    op: Add,
                    left: GetVar(
                        GetVar {
                            name: Ident(
                                "a",
                            ),
                        },
                    ),
                    right: GetVar(
                        GetVar {
                            name: Ident(
                                "b",
                            ),
                        },
                    ),
                },
            ),
        ),
        Expr(
            Call(
                Call {
                    target: GetVar(
                        GetVar {
                            name: Ident(
                                "a",
                            ),
                        },
                    ),
                    args: [
                        GetVar(
                            GetVar {
                                name: Ident(
                                    "b",
                                ),
                            },
                        ),
                    ],
                },
            ),
        ),
        Expr(
            GetVar(
                GetVar {
                    name: Ident(
                        "a",
                    ),
                },
            ),
        ),
    ],
}
