src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__if_statement_supports_semicolons.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        If(
            If {
                branches: [
                    Branch {
                        cond: Literal(
                            Bool(
                                true,
                            ),
                        ),
                        body: [
                            If(
                                If {
                                    branches: [
                                        Branch {
                                            cond: Literal(
                                                Bool(
                                                    true,
                                                ),
                                            ),
                                            body: [
                                                Print(
                                                    Print {
                                                        values: [
                                                            GetVar(
                                                                GetVar {
                                                                    name: Ident(
                                                                        "x",
                                                                    ),
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                                Print(
                                                    Print {
                                                        values: [
                                                            GetVar(
                                                                GetVar {
                                                                    name: Ident(
                                                                        "y",
                                                                    ),
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            ],
                                        },
                                    ],
                                    default: None,
                                },
                            ),
                            If(
                                If {
                                    branches: [
                                        Branch {
                                            cond: Literal(
                                                Bool(
                                                    true,
                                                ),
                                            ),
                                            body: [
                                                Print(
                                                    Print {
                                                        values: [
                                                            GetVar(
                                                                GetVar {
                                                                    name: Ident(
                                                                        "z",
                                                                    ),
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            ],
                                        },
                                    ],
                                    default: None,
                                },
                            ),
                        ],
                    },
                ],
                default: None,
            },
        ),
    ],
}
